# rostr-platform

./: .env  Dockerfile  MANIFEST.md  README.md
architecture/: rostr-master-architecture.html
backend/: .env.example  Dockerfile  auth_utils.py  main.py  railway.json  requirements.txt
backend/db/: database.py  rostr.db
backend/routers/: agents.py  auth.py  hub.py  npao.py  pal.py  ragdal.py  settings.py  stats.py
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  (+1 more)
deploy/: package-lock.json  package.json  tailwind.config.ts  vercel.json
pal-site/: .gitignore  docusaurus.config.ts  sidebars.ts  vercel.json
pal-site/docs/: deploy.md  index.mdx  npao-orchestrator.md  pal-five-stages.md  pal-implementation.md  pal-whitepaper.md  quick-start.md  ragdal-knowledge.md  rostr-architecture.md  rostr-hub.md
pal-site/scripts/: prebuild.mjs
platform/: package-lock.json  package.json  tailwind.config.ts  vercel.json
platform/.next/: trace
rostr-core/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
rostr-core/.github/workflows/: tests.yml
rostr-core/examples/: gtm_research_agent.py
rostr-core/src/rostr/: __init__.py
rostr-core/src/rostr/hub/: __init__.py
rostr-core/src/rostr/npao/: __init__.py
rostr-core/src/rostr/pal/: __init__.py
rostr-core/src/rostr/ragdal/: __init__.py
rostr-core/tests/: test_rostr.py
saas/: index.html  vercel.json
skills/npao-orchestrator/: SKILL.md
skills/pal-compiler/: SKILL.md
skills/ragdal-knowledge/: SKILL.md
skills/rostr-agent-builder/: SKILL.md
skills/rostr-hub/: SKILL.md
(+59 files in other folders)
