[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rostr-core"
version = "1.0.0"
description = "ROSTR: A Unified Architecture for Production-Grade Multi-Agent Systems with Phase-Aware Orchestration and Persistent Knowledge Compounding"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patrick Diamitani", email = "patrick@diamitani.com"}
]
keywords = [
    "ai", "agents", "multi-agent", "llm", "orchestration",
    "rag", "prompt-engineering", "knowledge-management",
    "agent-operating-system", "workflow-automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://rostr-framework.vercel.app"
Repository = "https://github.com/rostr-ai/rostr"
Documentation = "https://rostr-framework.vercel.app/docs"
"Bug Tracker" = "https://github.com/rostr-ai/rostr/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
